--- a/index.html
+++ b/index.html
@@ -1,4 +1,71 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI Social Content Genie</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+body { font-family: Inter, system-ui, sans-serif; }
+</style>
+</head>
+<body class="bg-slate-100 min-h-screen flex items-center justify-center p-6">
+<div class="bg-white max-w-3xl w-full rounded-3xl shadow-xl p-8 space-y-6">
+  <!-- HEADER -->
+  <div class="flex justify-between items-center">
+    <h1 id="title" class="text-3xl font-extrabold text-indigo-600">🧞‍♂️ AI Content Genie</h1>
+    <button onclick="toggleLang()" class="text-sm font-bold text-indigo-600 border px-3 py-1 rounded-full">FR / EN</button>
+  </div>
+  <p id="subtitle" class="text-slate-600">L’IA écrit vos contenus pour les réseaux sociaux.</p>
+  <textarea id="prompt" rows="5" class="w-full p-4 border rounded-xl focus:ring-2 focus:ring-indigo-300" placeholder="Ex : 5 astuces pour mieux vendre sur LinkedIn..."></textarea>
+  <div class="grid grid-cols-2 gap-4">
+    <select id="platform" class="p-3 border rounded-xl">
+      <option value="LinkedIn">LinkedIn</option>
+      <option value="Instagram">Instagram</option>
+      <option value="TikTok">TikTok</option>
+    </select>
+    <select id="tone" class="p-3 border rounded-xl">
+      <option value="Professionnel">Professionnel</option>
+      <option value="Inspirant">Inspirant</option>
+      <option value="Humoristique">Humoristique</option>
+    </select>
+  </div>
+  <button onclick="generate()" class="w-full py-4 bg-indigo-600 text-white font-bold rounded-xl hover:bg-indigo-700 transition">
+    ✨ Générer le contenu
+  </button>
+  <div id="output" class="bg-slate-50 p-6 rounded-xl border italic text-slate-600 min-h-[150px]">
+    Votre contenu apparaîtra ici…
+  </div>
+  <p class="text-xs text-center text-slate-400">Version gratuite — Généré par AI Genie</p>
+</div>
 <script>
+let lang = "fr";
+const texts = {
+  fr: {
+    subtitle: "L’IA écrit vos contenus pour les réseaux sociaux.",
+    placeholder: "Ex : 5 astuces pour mieux vendre sur LinkedIn...",
+    loading: "Le génie réfléchit…"
+  },
+  en: {
+    subtitle: "AI writes your social media content for you.",
+    placeholder: "Ex: 5 tips to grow on LinkedIn...",
+    loading: "The genie is thinking…"
+  }
+};
+function toggleLang() {
+  lang = lang === "fr" ? "en" : "fr";
+  document.getElementById("subtitle").innerText = texts[lang].subtitle;
+  document.getElementById("prompt").placeholder = texts[lang].placeholder;
+}
+async function generate() {
+  const prompt = document.getElementById("prompt").value;
+  const platform = document.getElementById("platform").value;
+  const tone = document.getElementById("tone").value;
+  const out = document.getElementById("output");
+  if (!prompt) return alert(lang === "fr" ? "Entre un sujet 🙂" : "Enter a topic 🙂");
+  out.innerText = texts[lang].loading;
+  try {
+    const res =<script>
 let lang = "fr";
 async function generate() {
   const prompt = document.getElementById("prompt").value;
