Add remaining generations counter to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<p id="counter" class="text-sm text-slate-500">
+  Générations restantes : <span id="remaining">3</span>
+</p><!DOCTYPE html>
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
