--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta charset="UTF-8">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Bienvenue au Génie !</title>
+</head>
+<body class="bg-indigo-50 flex items-center justify-center h-screen">
+    <div class="bg-white p-12 rounded-3xl shadow-2xl text-center max-w-md">
+        <div class="w-20 h-20 bg-green-100 text-green-600 rounded-full flex items-center justify-center mx-auto mb-6 text-4xl">
+            ✓
+        </div>
+        <h1 class="text-3xl font-bold mb-4">Paiement Réussi !</h1>
+        <p class="text-slate-600 mb-8">Votre accès **Premium** est désormais actif. Le Génie est prêt à travailler pour vous.</p>
+        <a href="/dashboard" class="block w-full py-4 bg-indigo-600 text-white font-bold rounded-xl hover:bg-indigo-700 transition">
+            Accéder à mon tableau de bord
+        </a>
+    </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AI Social Content Genie</title>
